--- a/app/config.json
+++ b/app/config.json
@@ -7,6 +7,7 @@
     "os:ios": {},
     "os:windows": {},
     "dependencies": {
-        "input-materialdesign": "*"
+        "input-materialdesign": "*",
+        "com.juanagu.fab":"*"
     }
 }
